# django-switch-config-backup

./: .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
config_backup/: ConfigBackup.py  backup.py  exceptions.py  git.py  models.py  requirements.txt  urls.py  views.py
config_backup/management/commands/: config_backup.py  enable_scp.py  power_cycle.py  vlan.py
config_backup/switch_cli/: cisco_telnet.py  get_connection.py
config_backup/switch_cli/connections/: __init__.py  exceptions.py
config_backup/switch_cli/connections/ArubaCX/: __init__.py  rest.py
config_backup/switch_cli/connections/Cisco/: CLI.py  telnet.py
config_backup/switch_cli/connections/Comware/: ComwareCLI.py
config_backup/switch_cli/connections/HP/: ProCurveCLI.py  telnet.py
config_backup/switch_cli/connections/common/: Connection.py  SwitchCli.py  ssh.py  telnet.py
config_backup/templates/config_backup/: backup_status.html
